hphp/hack/test/typecheck/yield_wait_forv_result_bad1.php.exp
File "yield_wait_forv_result_bad1.php", line 18, characters 10-23:
Invalid return type (Typing[4110])
File "yield_wait_forv_result_bad1.php", line 12, characters 33-35:
This is an int
File "yield_wait_forv_result_bad1.php", line 16, characters 39-44:
It is incompatible with a string
